# min-stora-dag

./: .gitignore  README.md  menu_checker.py  pyproject.toml  test_menu_checker.py
.github/workflows/: min-stora-dag.yml
